<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BrowseMap</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="map_mode">Map Mode</string>
    <string name="satellite">Satellite View</string>
    <string name="traffic">Traffic View</string>
    <string name="streetview">Street View</string>
    <string name="bookmarkview">Show Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="find">Find Location</string>
    <string name="center_gps">My Location</string>
    <string name="track_gps">Track Location</string>
    <string name="compass">Show Compass</string>
    <string name="save">Save Location</string>
    <string name="saveButton">Save</string>
    <string name="edit">Bookmarks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="empty_list">No bookmarks</string>
    <string name="bkm_edit">Edit</string>
    <string name="bkm_delete">Delete</string>
    <string name="bkm_count">Count</string>
    <string name="bkm_goto">Goto..</string>
    <string name="latitude">lat</string>
    <string name="longitude">lon</string>
</resources>
